# sqlite_module

./: .gitignore  .vscode-ctags  CMakeLists.txt  prj.conf
sqlitelib/: Makefile
src/: main.c
